--- a/str-consumer/pom.xml
+++ b/str-consumer/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pms</groupId>
-	<artifactId>str-producer</artifactId>
+	<artifactId>str-consumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>str-producer</name>
+	<name>str-consumer</name>
 	<description>Projeto Springboot com Kafka</description>
 	<properties>
 		<java.version>17</java.version>
